<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingVertical="20dp"
        android:gravity="center"
        android:text="@string/appName"
        android:textSize="25sp"
        android:background="@drawable/shape_header"
        android:elevation="8dp"/>

<!--    <View-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="2dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:background="@color/grey" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:paddingVertical="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/amountLabel"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_amount"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="6"
                android:background="@drawable/spinner"
                android:gravity="center|end"
                android:hint="@string/edt_input_an_amount"
                android:inputType="numberDecimal"
                android:elevation="8dp"
                android:paddingHorizontal="10dp" />

            <View
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:background="@color/grey" />

            <Spinner
                android:id="@+id/spinner_symbol_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result_exchange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/result_exchange"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="6"
                android:background="@drawable/spinner"
                android:gravity="center|end"
                android:paddingHorizontal="10dp"
                android:elevation="8dp"
                android:text="@string/hint_result_text"
                android:textSize="20sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:background="@color/grey" />

            <Spinner
                android:id="@+id/spinner_symbol_to"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>
        </LinearLayout>


    </LinearLayout>
    <TextView
        android:id="@+id/rate_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="4dp"
        android:textStyle="bold"
        android:text="@string/rates"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp">

        <TextView
            android:id="@+id/currencyFrom_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:text="@string/from"
            android:textSize="16sp"
            android:textStyle="italic" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:src="@drawable/baseline_arrow_right_alt_24"/>
        <TextView
            android:id="@+id/currencyTo_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:text="@string/to"
            android:textSize="16sp"
            android:textStyle="italic" />

    </LinearLayout>

    <TextView
        android:id="@+id/timestamp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingHorizontal="20dp"
        android:paddingVertical="8dp"
        android:text="@string/at_loading"
        android:textStyle="italic" />
</LinearLayout>